# Neuthread

./: CMakeLists.txt  LICENSE  Layer.cpp  Layer.h  Network.cpp  Network.h  README.md  Threader.cpp  Threader.h  main.cpp  neuron.cpp  neuron.h
